--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@onlea/tincanjs",
   "description": "Experience API (Tin Can API) Library (with support for parent-window LRS emulation)",
-  "version": "0.50.0",
+  "version": "0.50.1-local.0",
   "private": false,
   "license": "Apache-2.0",
   "main": "build/tincan-node.js",
